--- a/dbt_project.yml
+++ b/dbt_project.yml
@@ -1,27 +1,41 @@
-name: dbtvault_snowflake_demo
-profile: dbtvault_snowflake_demo
-version: '5.3.0'
-require-dbt-version: ['>=1.0.0', '<2.0.0']
+# Name your project! Project names should contain only lowercase characters
+# and underscores. A good package name should reflect your organization's
+# name or the intended use of these models
+name: 'dbtvault_snowflake_demo'
+version: '1.0.0'
 config-version: 2
 
-analysis-paths:
-  - analysis
-clean-targets:
-  - target
-seed-paths:
-  - seeds
-macro-paths:
-  - macros
-model-paths:
-  - models
-test-paths:
-  - tests
-target-path: target
+# This setting configures which "profile" dbt uses for this project.
+profile: 'dbtvault_snowflake_demo'
+
+# These configurations specify where dbt should look for different types of files.
+# The `source-paths` config, for example, states that models in this project can be
+# found in the "models/" directory. You probably won't need to change these!
+model-paths: ["models"]
+analysis-paths: ["analyses"]
+test-paths: ["tests"]
+seed-paths: ["seeds"]
+macro-paths: ["macros"]
+snapshot-paths: ["snapshots"]
+
+target-path: "target"  # directory which will store compiled SQL files
+clean-targets:         # directories to be removed by `dbt clean`
+  - "target"
+  - "dbt_packages"
 
 vars:
   load_date: '1992-01-08'
   tpch_size: 10 #1, 10, 100, 1000, 10000
 
+# Configuring models
+# Full documentation: https://docs.getdbt.com/docs/configuring-models
+
+# In this example config, we tell dbt to build all models in the example/ directory
+# as tables. These settings can be overridden in the individual model files
+# using the `{{ config(...) }}` macro.
+#models:
+#  mydbtvault_demo:
+#      +materialized: view
 models:
   dbtvault_snowflake_demo:
     raw_stage:
