--- a/packages.yml
+++ b/packages.yml
@@ -1,3 +1,5 @@
 packages:
   - package: Datavault-UK/dbtvault
     version: 0.9.5
+  - package: dbt-labs/audit_helper
+    version:  0.9.0 #[">=0.6.0", "<0.9.0"]
